--- a/시작.md
+++ b/시작.md
@@ -11,7 +11,7 @@
         <h1>안녕하세요, 저는 문병국 입니다!</h1>
         <nav>
             <ul>
-                <li><a href="https://youtu.be/_zILzUrwWMg?si=rORWxf8SQZKUMiEV">유튜브: 문병국 목성 프로필</a></li>
+                <li><a href="https://www.youtube.com/@문병국-e9f">유튜브: 문병국 목성 프로필</a></li>
                 <li><a href="https://">010-9646-9123</a></li>
                 <li><a href="https://">이름: 문병국</a></li>
             </ul>
